use new integrated prices from tcpdex api, drop old price code
