# backend/src/models/db/Card.ts
@@ -10,6 +10,23 @@ export type Variants = {
   wPromo?: boolean,
 };
 
+export type CardMarketPricing = {
+  updatedAt?: string;
+  unit?: string,
+  avg?: number,
+  low?: number,
+  trend?: number,
+  avg1?: number,
+  avg7?: number,
+  avg30?: number,
+  'avg-holo'?: number,
+  'low-holo'?: number,
+  'trend-holo'?: number,
+  'avg1-holo'?: number,
+  'avg7-holo'?: number,
+  'avg30-holo'?: number,
+};
+
 export default class Card extends BaseModel {
   uid!: UUID;
   id!: string; //min 1, max length 255
@@ -19,11 +36,15 @@ export default class Card extends BaseModel {
   image!: string; //min 1, max length 255
   rarity!: string | null | undefined; //max length 255
   variants!: Variants;
+  pricing!: {
+    cardmarket: CardMarketPricing | null | undefined,
+  };
   language!: string; //min 2, max length 15
   updatedAt!: Date;
 
   static new(uid: UUID, id: string, name: string, setId: string, number: string, image: string,
-             rarity: string | null | undefined, variants: Variants, language: string): Card {
+             rarity: string | null | undefined, variants: Variants,
+             pricing: { cardmarket: CardMarketPricing | null | undefined }, language: string): Card {
     const ret = new Card();
     ret.uid = uid;
     ret.id = id;
@@ -33,6 +54,7 @@ export default class Card extends BaseModel {
     ret.image = image;
     ret.rarity = rarity;
     ret.variants = variants;
+    ret.pricing = pricing;
     ret.language = language;
     ret.updatedAt = new Date();
     return ret;
@@ -50,7 +72,7 @@ export default class Card extends BaseModel {
     return {
       $id: 'Card',
       type: 'object',
-      required: ['uid', 'id', 'name', 'setId', 'number', 'image', 'variants', 'language', 'updatedAt'],
+      required: ['uid', 'id', 'name', 'setId', 'number', 'image', 'variants', 'pricing', 'language', 'updatedAt'],
 
       properties: {
         uid: {type: 'string', format: 'uuid'},
@@ -68,6 +90,30 @@ export default class Card extends BaseModel {
             normal: {type: 'boolean'},
             reverse: {type: 'boolean'},
             wPromo: {type: 'boolean'},
+          },
+        },
+        pricing: {
+          type: 'object',
+          properties: {
+            cardmarket: {
+              type: 'object',
+              properties: {
+                updatedAt: {type: 'string', format: 'date-time'},
+                unit: {type: 'string'},
+                avg: {type: 'number'},
+                low: {type: 'number'},
+                trend: {type: 'number'},
+                avg1: {type: 'number'},
+                avg7: {type: 'number'},
+                avg30: {type: 'number'},
+                'avg-holo': {type: 'number'},
+                'low-holo': {type: 'number'},
+                'trend-holo': {type: 'number'},
+                'avg1-holo': {type: 'number'},
+                'avg7-holo': {type: 'number'},
+                'avg30-holo': {type: 'number'},
+              },
+            },
           },
         },
         language: {type: 'string', minLength: 2, maxLength: 15}, //max length 255
