# backend/src/tcgDexNetApi/models/TcgDexNetCard.ts
@@ -15,5 +15,23 @@ export default interface TcgDexNetCard {
     normal?: boolean,
     reverse?: boolean,
     wPromo?: boolean
+  },
+  pricing: {
+    cardmarket: {
+      updatedAt?: string;
+      unit?: string,
+      avg?: number,
+      low?: number,
+      trend?: number,
+      avg1?: number,
+      avg7?: number,
+      avg30?: number,
+      'avg-holo'?: number,
+      'low-holo'?: number,
+      'trend-holo'?: number,
+      'avg1-holo'?: number,
+      'avg7-holo'?: number,
+      'avg30-holo'?: number,
+    }
   }
 }
